# docling-parse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  local_build.py  pyproject.toml  setup.py
.github/: SECURITY.md  mergify.yml
.github/scripts/: build_rhel.sh  release.sh
.github/workflows/: cd.yml  checks.yml  ci.yml  release.yml  rhel.yml  wheels.yml
app/: analyse.cpp  page_images.cpp  parse.cpp  parse_fonts.cpp  parse_v2.cpp  pybind_parse.cpp  render.cpp  run_scaling.cpp
cmake/: extlib_blend2d.cmake  extlib_cxxopts.cmake  extlib_freetype.cmake  extlib_jpeg.cmake  extlib_json.cmake  extlib_lcms2.cmake  extlib_openjpeg.cmake  extlib_pdfium_jbig2.cmake  extlib_pybind11.cmake  extlib_qpdf_v11.cmake  extlib_qpdf_v12.cmake  extlib_utf8.git.cmake  lcms2_CMakeLists.txt
docling_parse/: __init__.py  pdf_parser.py  performance_timings.py  processing_dir.py  processing_s3.py  visualize.py
docling_parse/pdf_resources/glyphs/custom/MathematicalPi/: transform.py
docs/: legacy_performance_benchmarks.md  performance_code.md
docs/plans/: threaded-api-design.md
perf/: README.md  run_analysis.py  run_eval.py  run_perf.py  run_scaling.py  run_scaling_threaded_parser.py  run_scaling_threaded_renderer.py  run_scaling_visualization.py
scripts/: check_rendering_regression.py  export_dclx.py  inspect_rendering.py
src/: parse.h  render.h  resources.h
src/parse/: config.h  enums.h  page_item.h  page_item_sanitator.h  parser.h  pdf_decoder.h  pdf_resource.h  pdf_state.h  utils.h
src/parse/page_item_sanitators/: cells.h  page_dimension.h  shapes.h
src/parse/page_items/: embedded_font_blob.h  page_cell.h  page_cells.h  page_dimension.h  page_hyperlink.h  page_hyperlinks.h  page_image.h  page_images.h  page_shape.h  page_shapes.h  page_widget.h  page_widgets.h  render_instructions.h
src/parse/pdf_decoders/: document.h  page.h  stream.h  stream_enums.h
src/parse/pdf_resources/: page_cell.h  page_colorspace.h  page_colorspaces.h  page_dimension.h  page_font.h  page_fonts.h  page_grph.h  page_grphs.h  page_image.h  page_shape.h  page_shapes.h  page_xobject.h  page_xobject_form.h  page_xobject_image.h  page_xobject_postscript.h  page_xobjects.h
src/parse/pdf_resources/page_font/: base_font.h  base_fonts.h  char_description.h  char_processor.h  cmap.h  cmap_value.h  embedded_font_program.h  encoding.h  font_cid.h  font_cids.h  glyphs.h
src/parse/pdf_sanitators/: cells.h  page_dimension.h  shapes.h
src/parse/pdf_states/: bitmap.h  global.h  grph.h  line.h  shape.h  text.h
src/parse/qpdf/: annots.h  logger.h  qpdf_compat.h  stream_decoder.h  stream_instruction.h  to_json.h
src/parse/utils/: numeric.h  pdf_timings.h  string.h  values.h
src/parse/utils/bitmap/: bitmap_exporter.h
src/parse/utils/ccitt/: ccitt_utils.h
src/parse/utils/color/: icc_utils.h
src/parse/utils/jpeg/: jpeg_utils.h
src/parse/utils/jpx/: jpx_utils.h
src/pybind/: docling_parser.h  docling_parser_v2.h  docling_resources.h  docling_sanitizer.h  docling_threaded_base.h  docling_threaded_parser.h  docling_threaded_renderer.h  docling_threaded_results.h  native_memory.h
src/render/: blend2d_embedded_font_cache.h  blend2d_font_resolver.h  blend2d_renderer.h  config.h  freetype_embedded_font_cache.h  naive_renderer.h  template_renderer.h
src/v1/proj_folders/pdf_library/qpdf/parser/: font.h
src/v2/: parser.h
src/v2/pdf_decoders/: document.h  page.h
src/v2/pdf_resources/: page_cells.h  page_dimension.h  page_font.h  page_xobjects.h
src/v2/pdf_resources/page_font/: font_cid.h
src/v2/pdf_sanitators/: cells.h
tests/: README.md  conftest.py  constants.py  data_utils.py  rendering_regression.py  test_embedded_fonts.py  test_load_failure.py  test_locale_safety.py  test_parse.py  test_parse_v2.py  test_renderer.py  test_standard_font_widths.py  test_threaded_parse.py  test_threaded_render.py  update_groundtruth.py
tests/data/groundtruth/: annots_01.pdf.page_no_1.py.json  annots_01.pdf.page_no_1.py.json.char.txt  annots_01.pdf.page_no_1.py.json.line.txt  annots_01.pdf.page_no_1.py.json.word.txt  annots_02.pdf.page_no_1.py.json  annots_02.pdf.page_no_1.py.json.char.txt  annots_02.pdf.page_no_1.py.json.line.txt  annots_02.pdf.page_no_1.py.json.word.txt  broken_media_box_v01.pdf.page_no_1.py.json  broken_media_box_v01.pdf.page_no_1.py.json.char.txt  broken_media_box_v01.pdf.page_no_1.py.json.line.txt  broken_media_box_v01.pdf.page_no_1.py.json.word.txt  broken_media_box_v01.pdf.v1.p=0.json  broken_media_box_v01.pdf.v2.json  broken_media_box_v01.pdf.v2.p=0.json  cropbox_versus_mediabox_01.pdf.page_no_1.py.json  cropbox_versus_mediabox_01.pdf.page_no_1.py.json.char.txt  cropbox_versus_mediabox_01.pdf.page_no_1.py.json.line.txt  cropbox_versus_mediabox_01.pdf.page_no_1.py.json.word.txt  cropbox_versus_mediabox_01.pdf.v2.json  cropbox_versus_mediabox_01.pdf.v2.p=0.json  cropbox_versus_mediabox_02.pdf.page_no_1.py.json  cropbox_versus_mediabox_02.pdf.page_no_1.py.json.char.txt  cropbox_versus_mediabox_02.pdf.page_no_1.py.json.line.txt  cropbox_versus_mediabox_02.pdf.page_no_1.py.json.word.txt  cropbox_versus_mediabox_02.pdf.page_no_2.py.json  cropbox_versus_mediabox_02.pdf.page_no_2.py.json.char.txt  cropbox_versus_mediabox_02.pdf.page_no_2.py.json.line.txt  cropbox_versus_mediabox_02.pdf.page_no_2.py.json.word.txt  cropbox_versus_mediabox_02.pdf.page_no_3.py.json  cropbox_versus_mediabox_02.pdf.page_no_3.py.json.char.txt  cropbox_versus_mediabox_02.pdf.page_no_3.py.json.line.txt  cropbox_versus_mediabox_02.pdf.page_no_3.py.json.word.txt  cropbox_versus_mediabox_02.pdf.v2.json  cropbox_versus_mediabox_02.pdf.v2.p=0.json  cropbox_versus_mediabox_02.pdf.v2.p=1.json  deep-mediabox-inheritance.pdf.page_no_2.py.json  deep-mediabox-inheritance.pdf.page_no_2.py.json.char.txt  deep-mediabox-inheritance.pdf.page_no_2.py.json.line.txt  deep-mediabox-inheritance.pdf.page_no_2.py.json.word.txt  (+246 more)
